--- a/application/src/main/res/layout/activity_tv_show_details.xml
+++ b/application/src/main/res/layout/activity_tv_show_details.xml
@@ -2,18 +2,17 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layerType="hardware">
 
-    <pl.hypeapp.noiseview.NoiseView
-        android:id="@+id/noise_view_tv_show_details"
+    <ViewStub
+        android:id="@+id/stub_tv_show_details_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/guideline_backdrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:noiseIntensity="0.15" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline_backdrop"
@@ -77,16 +76,14 @@
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar_tv_show_details"
+            style="@style/EpisodieTheme.TvShowDetailsAppBar"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:background="@android:color/transparent"
-            android:fitsSystemWindows="true"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            android:fitsSystemWindows="true">
 
             <android.support.design.widget.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/transparent"
                 android:fitsSystemWindows="true"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
@@ -191,8 +188,7 @@
                             android:layout_width="@dimen/width_tv_show_details_cover"
                             android:layout_height="@dimen/height_tv_show_details_cover"
                             android:contentDescription="@string/tv_show_details_cover_description"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/tron" />
+                            android:scaleType="fitXY" />
 
                     </android.support.v7.widget.CardView>
 
@@ -260,5 +256,11 @@
         app:layout_constraintEnd_toEndOf="@id/image_view_tv_show_details_ic_share"
         app:layout_constraintStart_toStartOf="@id/image_view_tv_show_details_ic_share"
         app:layout_constraintTop_toTopOf="@id/image_view_tv_show_details_ic_share" />
+
+    <pl.hypeapp.episodie.ui.widget.RuntimeAlerterView
+        android:id="@+id/runtime_alerter_tv_show_details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-40dp" />
 
 </android.support.constraint.ConstraintLayout>
