--- a/application/src/main/res/layout/fragment_top_list.xml
+++ b/application/src/main/res/layout/fragment_top_list.xml
@@ -1,83 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar_top_list"
-        style="@style/EpisodieTheme.TopListAppBar"
-        android:layout_width="match_parent">
+    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <android.support.constraint.ConstraintLayout
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar_top_list"
+            style="@style/EpisodieTheme.TopListAppBar"
+            android:layout_width="match_parent">
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <ImageView
+                    android:id="@+id/image_view_top_list_backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/fragment_top_list_backdrop_description"
+                    android:scaleType="centerCrop" />
+
+                <ImageView
+                    android:id="@+id/image_view_top_list_share"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/all_ic_share_description"
+                    android:padding="@dimen/padding_big"
+                    android:src="@drawable/all_ic_share"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.11" />
+
+                <pl.hypeapp.episodie.ui.widget.DrawerHamburgerArrow
+                    android:id="@+id/image_view_top_list_ic_back_arrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:padding="@dimen/padding_big"
+                    app:arrow_color="@android:color/white"
+                    app:layout_constraintBottom_toBottomOf="@id/image_view_top_list_share"
+                    app:layout_constraintTop_toTopOf="@id/image_view_top_list_share" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/height_top_list_gradient"
+                    android:background="@drawable/all_gradient"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+
+                <TextView
+                    android:id="@+id/text_view_top_list_appbar_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="@dimen/padding_text_view_top_list_appbar_title"
+                    android:paddingStart="@dimen/padding_text_view_top_list_appbar_title"
+                    android:text="@string/top_list_app_bar_title"
+                    android:textSize="@dimen/text_size_top_list_appbar_title"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.9" />
+
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh_layout_top_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_behavior="pl.hypeapp.episodie.ui.features.top.TitleScrollingBehaviour">
 
-            <ImageView
-                android:id="@+id/image_view_top_list_backdrop"
-                android:layout_width="match_parent"
-                android:contentDescription="@string/fragment_top_list_backdrop_description"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop" />
-
-            <ImageView
-                android:id="@+id/image_view_top_list_share"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_top_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/padding_big"
-                android:contentDescription="@string/all_ic_share_description"
-                android:src="@drawable/all_ic_share"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.11" />
+                android:clickable="false"
+                android:clipToPadding="false"
+                android:scrollbars="vertical" />
 
-            <pl.hypeapp.episodie.ui.widget.DrawerHamburgerArrow
-                android:id="@+id/image_view_tv_show_details_ic_back_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:padding="@dimen/padding_big"
-                app:arrow_color="@android:color/white"
-                app:layout_constraintBottom_toBottomOf="@id/image_view_top_list_share"
-                app:layout_constraintTop_toTopOf="@id/image_view_top_list_share" />
+        </android.support.v4.widget.SwipeRefreshLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/height_top_list_gradient"
-                android:background="@drawable/all_gradient"
-                app:layout_constraintBottom_toBottomOf="parent" />
+    </android.support.design.widget.CoordinatorLayout>
 
-            <TextView
-                android:id="@+id/text_view_appbar_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/padding_text_view_top_list_appbar_title"
-                android:paddingStart="@dimen/padding_text_view_top_list_appbar_title"
-                android:text="@string/top_list_app_bar_title"
-                android:textSize="@dimen/text_size_top_list_appbar_title"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.9" />
-
-        </android.support.constraint.ConstraintLayout>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout_top_list"
+    <pl.hypeapp.episodie.ui.widget.RuntimeAlerterView
+        android:id="@+id/alerter_top_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="pl.hypeapp.episodie.ui.features.top.TitleScrollingBehaviour">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-40dp" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view_top_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:clipToPadding="false"
-            android:scrollbars="vertical" />
-
-    </android.support.v4.widget.SwipeRefreshLayout>
-
-</android.support.design.widget.CoordinatorLayout>
+</FrameLayout>
