--- a/application/src/main/res/layout/activity_tv_show_details.xml
+++ b/application/src/main/res/layout/activity_tv_show_details.xml
@@ -2,8 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layerType="hardware">
+    android:layout_height="match_parent">
 
     <ViewStub
         android:id="@+id/stub_tv_show_details_background"
@@ -257,10 +256,18 @@
         app:layout_constraintStart_toStartOf="@id/image_view_tv_show_details_ic_share"
         app:layout_constraintTop_toTopOf="@id/image_view_tv_show_details_ic_share" />
 
+    <Space
+        android:id="@+id/space_runtime_alerter"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <pl.hypeapp.episodie.ui.widget.RuntimeAlerterView
+        app:layout_constraintBottom_toBottomOf="@id/space_runtime_alerter"
         android:id="@+id/runtime_alerter_tv_show_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-40dp" />
+        android:layout_marginBottom="-40dp" />
 
 </android.support.constraint.ConstraintLayout>
