--- a/application/src/main/res/values/dimens.xml
+++ b/application/src/main/res/values/dimens.xml
@@ -66,6 +66,12 @@
     <dimen name="height_item_season_screen">90dp</dimen>
     <!--seasons fragment-->
     <dimen name="margin_bottom_fragment_season_recycler_view">90dp</dimen>
+    <!--view runtime alerter-->
+    <dimen name="height_view_runtime_alerter">140dp</dimen>
+    <dimen name="padding_top_view_runtime_alerter">40dp</dimen>
+    <dimen name="size_icon_view_runtime_alerter">32dp</dimen>
+    <dimen name="min_width_evaporate_text_view_runtime_alerter">50dp</dimen>
+    <dimen name="text_size_view_runtime_alerter">18sp</dimen>
     <!--misc-->
     <dimen name="padding_bottom_item_all">36dp</dimen>
     <dimen name="padding_top_item_all">24dp</dimen>
