Deleted: missing image view src.

--- a/application/src/main/res/layout-land/activity_tv_show_details.xml
+++ b/application/src/main/res/layout-land/activity_tv_show_details.xml
@@ -189,8 +189,7 @@
                             android:layout_width="@dimen/width_tv_show_details_cover"
                             android:layout_height="@dimen/height_tv_show_details_cover"
                             android:contentDescription="@string/tv_show_details_cover_description"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/tron" />
+                            android:scaleType="fitXY" />
 
                     </android.support.v7.widget.CardView>
 
