--- a/application/src/main/res/values/styles.xml
+++ b/application/src/main/res/values/styles.xml
@@ -33,6 +33,12 @@
         <item name="colorControlNormal">@android:color/white</item>
     </style>
 
+    <style name="EpisodieTheme.Toolbar.Transparent" parent="@style/ThemeOverlay.AppCompat.Light">
+        <item name="android:background">@null</item>
+        <item name="android:minHeight">?attr/actionBarSize</item>
+        <item name="colorControlNormal">@android:color/white</item>
+    </style>
+
     <style name="EpisodieTheme.FabButton" parent="EpisodieTheme.V0.FabButton"/>
     <style name="EpisodieTheme.V0.FabButton" parent="@style/Widget.Design.FloatingActionButton">
         <item name="fabSize">normal</item>
@@ -69,6 +75,10 @@
 
     <style name="EpisodieTheme.TvShowDetailsAppBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    <style name="EpisodieTheme.AlertDialog">
+        <item name="android:textColor">#ff0000</item>
     </style>
 
 </resources>
