--- a/application/src/main/res/layout/item_premiere.xml
+++ b/application/src/main/res/layout/item_premiere.xml
@@ -25,7 +25,7 @@
         android:id="@+id/card_view_item_premiere_cover"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="29dp"
         android:layout_marginStart="@dimen/margin_big"
         app:cardBackgroundColor="@color/primary"
         app:cardCornerRadius="@dimen/corner_radius_tv_show_details_cover"
@@ -62,7 +62,6 @@
         <TextView
             android:id="@+id/text_view_item_premiere_premiere_date"
             android:layout_width="wrap_content"
-            android:text="2017-30-11"
             android:layout_height="@dimen/size_tv_show_details_ic_full_runtime"
             android:layout_marginEnd="@dimen/margin_medium"
             android:layout_margin="@dimen/margin_default"
@@ -79,9 +78,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_default"
         android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginEnd="@dimen/margin_default"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="American Gods"
         android:textSize="@dimen/text_size_tv_show_details_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/card_view_item_premiere_cover"
