--- a/application/src/main/res/layout/item_season_tracker_episode.xml
+++ b/application/src/main/res/layout/item_season_tracker_episode.xml
@@ -86,8 +86,8 @@
             android:id="@+id/text_view_item_episode_runtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/margin_default"
-            android:layout_marginTop="@dimen/margin_default"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:layout_marginTop="@dimen/margin_medium"
             android:includeFontPadding="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -96,7 +96,7 @@
             android:id="@+id/text_view_item_episode_summary_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_default"
+            android:layout_marginStart="@dimen/margin_medium"
             android:layout_marginTop="@dimen/margin_default"
             android:text="@string/item_episode_summary_header"
             android:textSize="16sp"
@@ -107,9 +107,9 @@
             android:id="@+id/text_view_item_episode_summary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_default"
-            android:layout_marginEnd="@dimen/margin_default"
-            android:layout_marginStart="@dimen/margin_default"
+            android:layout_marginBottom="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:layout_marginStart="@dimen/margin_medium"
             android:layout_marginTop="@dimen/margin_default"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +120,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/item_all_ic_diamond_description"
-            android:padding="@dimen/padding_default"
+            android:paddingEnd="@dimen/padding_big"
+            android:paddingTop="@dimen/padding_big"
+            android:paddingStart="@dimen/padding_big"
             android:src="@drawable/all_ic_diamond_unchecked"
             app:layout_constraintBottom_toBottomOf="@id/image_view_item_episode_screen"
             app:layout_constraintEnd_toEndOf="parent"/>
