--- a/application/src/main/res/drawable/drawer_ic_watched.xml
+++ b/application/src/main/res/drawable/drawer_ic_watched.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:width="24dp"
-    android:height="24dp">
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportHeight="24"
+        android:viewportWidth="24">
     <group
         android:translateX="293"
         android:translateY="-385">
         <path
-            android:pathData="M-275 390.3l2 4 -3 0 -2 -4 -2 0 2 4 -3 0 -2 -4 -2 0 2 4 -3 0 -2 -4 -1 0c-1.1 0 -2 0.9 -2 2l0 12c0 1.1 0.9 2 2 2l16 0c1.1 0 2 -0.9 2 -2l0 -14 -4 0zm-1.6 6.2l-1.3 1.8 -2 -1.8 3.3 0zm-1.5 2l-4.6 0 2.3 -2.1 2.3 2.1zm-2.8 -2l-2 1.8 -1.3 -1.9 3.3 0.1zm-3.7 0.1l1.4 2 -2.8 0 1.4 -2zm-1.3 2.2l2.9 0 2.2 5.1 -5.1 -5.1zm3.2 0l4.6 0 -2.3 5.4 -2.3 -5.4zm2.7 5l2.3 -5.1 2.7 0 -5 5.1zm2.4 -5.3l1.2 -2 1.4 2 -2.6 0z"
-            android:fillColor="#FFF" />
+            android:fillColor="#FFF"
+            android:pathData="M-275 390.3l2 4 -3 0 -2 -4 -2 0 2 4 -3 0 -2 -4 -2 0 2 4 -3 0 -2 -4 -1 0c-1.1 0 -2 0.9 -2 2l0 12c0 1.1 0.9 2 2 2l16 0c1.1 0 2 -0.9 2 -2l0 -14 -4 0zm-1.6 6.2l-1.3 1.8 -2 -1.8 3.3 0zm-1.5 2l-4.6 0 2.3 -2.1 2.3 2.1zm-2.8 -2l-2 1.8 -1.3 -1.9 3.3 0.1zm-3.7 0.1l1.4 2 -2.8 0 1.4 -2zm-1.3 2.2l2.9 0 2.2 5.1 -5.1 -5.1zm3.2 0l4.6 0 -2.3 5.4 -2.3 -5.4zm2.7 5l2.3 -5.1 2.7 0 -5 5.1zm2.4 -5.3l1.2 -2 1.4 2 -2.6 0z"/>
     </group>
 </vector>
