--- a/application/src/main/res/layout/item_premiere.xml
+++ b/application/src/main/res/layout/item_premiere.xml
@@ -2,9 +2,9 @@
 <pl.hypeapp.materialtimelineview.MaterialTimelineView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/timeline_view_item_premiere"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/timeline_view_item_premiere"
     app:timeline_margin_start="32dp"
     app:timeline_position="middle"
     app:timeline_type="item">
@@ -40,8 +40,7 @@
             android:layout_width="@dimen/width_tv_show_details_cover"
             android:layout_height="@dimen/height_tv_show_details_cover"
             android:contentDescription="@string/tv_show_details_cover_description"
-            android:scaleType="fitXY"
-            android:src="@drawable/am"/>
+            android:scaleType="fitXY"/>
 
     </android.support.v7.widget.CardView>
 
@@ -63,8 +62,8 @@
             android:id="@+id/text_view_item_premiere_premiere_date"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/size_tv_show_details_ic_full_runtime"
-            android:layout_marginEnd="@dimen/margin_medium"
             android:layout_margin="@dimen/margin_default"
+            android:layout_marginEnd="@dimen/margin_medium"
             android:drawablePadding="@dimen/padding_small"
             android:drawableStart="@drawable/bottom_navigation_ic_premieres"
             android:gravity="center_horizontal|center_vertical"
@@ -77,43 +76,43 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_default"
-        android:layout_marginStart="@dimen/margin_default"
         android:layout_marginEnd="@dimen/margin_default"
+        android:layout_marginStart="@dimen/margin_default"
         android:ellipsize="end"
         android:maxLines="2"
         android:textSize="@dimen/text_size_tv_show_details_title"
+        app:layout_constraintBottom_toBottomOf="@id/card_view_item_premiere_cover"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/card_view_item_premiere_cover"
-        app:layout_constraintTop_toBottomOf="@id/card_view_item_premiere_premiere_date"
-        app:layout_constraintBottom_toBottomOf="@id/card_view_item_premiere_cover"/>
+        app:layout_constraintTop_toBottomOf="@id/card_view_item_premiere_premiere_date"/>
 
     <TextView
         android:id="@+id/text_view_item_premiere_status"
         android:layout_width="0dp"
-        android:layout_marginTop="@dimen/margin_default"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginTop="@dimen/margin_default"
         app:layout_constraintStart_toEndOf="@id/card_view_item_premiere_cover"
         app:layout_constraintTop_toBottomOf="@id/text_view_item_premiere_title"/>
 
     <TextView
         android:id="@+id/text_view_item_premiere_genre"
         android:layout_width="0dp"
-        android:visibility="gone"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/margin_default"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/card_view_item_premiere_cover"
         app:layout_constraintTop_toBottomOf="@id/text_view_item_premiere_status"/>
 
     <ImageView
         android:id="@+id/image_view_item_premiere_notification_icon"
         android:layout_width="wrap_content"
-        android:layout_marginEnd="@dimen/margin_default"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_default"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/margin_default"
+        android:src="@drawable/all_ic_notifications_on"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/all_ic_notifications_on"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </pl.hypeapp.materialtimelineview.MaterialTimelineView>
