--- a/application/src/main/res/layout/toolbar_feed.xml
+++ b/application/src/main/res/layout/toolbar_feed.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/toolbar_feed"
+    android:id="@+id/toolbar_activity_all"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:theme="@style/EpisodieTheme.Toolbar"
